make navbar not fixed
The fixed navbar takes up precious vertical space (esp. on mobile), which impedes readability. It can also be complex and error-prone (for example, the liveblog indexes lacked padding-top, so their page titles overlapped with the navbar).

Note that https://stripe.com and https://stripe.com/blog also got rid of their fixed navbar recently, so there is precedent.

--- a/website/src/css/styles.scss
+++ b/website/src/css/styles.scss
@@ -278,15 +278,6 @@ table {
 body {
     background: url('/page-bg.svg') repeat;
 }
-.home,
-.content-page,
-.customers-page,
-.pricing-page,
-.case-study,
-.form-page,
-.blog-post {
-    padding-top: 70px;
-}
 .virtual-br::before {
     content: '\A';
 }
